--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "axios": "^1.7.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "react": "^18.3.1",
