--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -19,10 +20,13 @@
     "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
+    "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^3.1.1",
     "react-router-dom": "^6.26.2",
+    "react-window": "^2.2.3",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
@@ -35,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "json-server": "^1.0.0-beta.1",
     "vite": "^5.4.1"
   }
 }
