--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
+    "@types/leaflet-draw": "^1.0.13",
     "axios": "^1.7.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "leaflet.heat": "^0.2.0",
     "notistack": "^3.0.2",
     "react": "^18.3.1",
