Fix ML API timeout issue with retry logic and increased timeout + update env config

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Environment Variables
 
 # Backend API Base URL (json-server)
-VITE_WEATHER_API_BASE_URL=http://localhost:3001
+VITE_WEATHER_API_BASE_URL=http://localhost:3000/api
 
 # Optional: API Authentication Token
 # VITE_API_TOKEN=your_token_here
